lilv (0.24.3) unstable;

  * Gracefully handle plugins with missing binary URIs
  * Remove use of deprecated readdir_r
  * Install Python bindings when configured without tests
    (thanks Clement Skau)

 -- David Robillard <d@drobilla.net>  Mon, 06 Mar 2017 18:57:09 +0100

lilv (0.24.2) stable;

  * Fix saving state to paths that contain URI delimiters (#, ?, etc)
  * Fix comparison of restored states with paths

 -- David Robillard <d@drobilla.net>  Wed, 04 Jan 2017 11:48:08 -0500

lilv (0.24.0) stable;

  * Add new hand-crafted Pythonic bindings with full test coverage
  * Add lv2apply utility for applying plugins to audio files
  * Add lilv_world_get_symbol()
  * Add lilv_state_set_metadata() for adding state banks/comments/etc
    (based on patch from Hanspeter Portner)
  * Fix crash when state contains non-POD properties
  * Fix crash when NULL predicate is passed to lilv_world_find_nodes()
  * Fix state file versioning
  * Unload contained resources when bundle is unloaded
  * Do not instantiate plugin when data fails to parse
  * Support re-loading plugins
  * Replace bundles if bundle with newer plugin version is loaded
    (based on patch from Robin Gareus)
  * Fix loading dyn-manifest from bundles with spaces in their path
  * Check lv2:binary predicate for UIs
  * Add LILV_URI_ATOM_PORT and LILV_URI_CV_PORT defines
  * Fix documentation installation
  * Fix outdated comment references to lilv_uri_to_path()

 -- David Robillard <d@drobilla.net>  Mon, 19 Sep 2016 22:24:57 -0400

lilv (0.22.0) stable;

  * Fix loading files with spaces in their path
  * Add lilv_file_uri_parse() for correct URI to path conversion
  * Add lilv_node_get_path() for convenient file URI path access
  * Add lilv_state_emit_port_values() for special port value handling
  * Add lilv_state_get_uri()
  * Add lilv_state_delete() for deleting user saved presets
  * Add lilv_free() for systems picky about such things
  * Fix lilv_world_ask() to work with wildcards